name:                guling
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://gitlab.com/ibnuda/guling#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  other-modules:       Types
                     , Urai
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.2
                     , attoparsec
                     , bytestring >= 0.10
                     , conduit
                     , conduit-extra
                     , optparse-applicative
                     , text
                     , time
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable guling
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , guling
                     , protolude >= 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite guling-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , guling
                     , protolude >= 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://gitlab.com/ibnuda/guling
